<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.melvin.carstracker.ui.car.viewmodel.CarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.car.newcar.NewCarForm" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_gap"
            android:text="@string/add_new_car_title"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brand_car_text_input"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/brand_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brand_hint"
                android:text="@={viewmodel.brand}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/model_car_text_input"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_gap"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand_car_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/model_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model_hint"
                android:text="@={viewmodel.model}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        android:backgroundTint="@color/buttonColor"-->
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> viewmodel.createCar()}"

            android:text="@string/submit_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model_car_text_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
